assets/css/style.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v7.0.29,
* Autoprefixer: v9.7.6
* Browsers: last 4 version
*/

/*-----------Google Fonts-----------*/

@import url('https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@500;600&family=Roboto:wght@400;500&display=swap');

/*-----------Google Fonts Ends-------------*

/*-----------Background color------------*/

.content-background {
    background-color: #B09E80;
}

.content-background-light {
    background-color: #dcd4c5;
}

.content-background-gradient { /*-- Thanks to https://www.w3schools.com/css/css3_gradients.asp for this code --*/
    background-image: -webkit-gradient(linear, left top, right bottom, from(#fff), to(#B09E80));
    background-image: -o-linear-gradient(top left, #fff, #B09E80);
    background-image: linear-gradient(to bottom right, #fff, #B09E80);
}

/*-----------Background color ends------------*/

/*-----------Text-----------*/

.headings-light {
    color: #B09E80;
    font-family: "Cormorant SC", sans-serif;
}

.headings-dark {
    color: #192537;
    font-family: "Cormorant SC", sans-serif;
}

.content-text-light {
    color: #B09E80;
    font-family: "Roboto", sans-serif;
}

.content-text-dark {
    color: #192537;
    font-family: "Roboto", sans-serif;
}

/*-----------Headings Padding------------*/
.headings {
    padding-top: 20px;
    padding-bottom: 20px;
}

/*-----------Headings Padding Ends------------*/

/*-----------Text Ends------------*/

/*-----------Logo-----------*/

.logo-abb {
    margin:0;
    margin-top: 1rem;
}

.logo-abb:before,
.logo-abb:after { /*-- Thanks to http://vclever.com/blog/how-to-style-a-heading-with-horizontal-lines-either-side-using-css/ for this code --*/
 background-color: #B09E80;
 content: "";
 display: inline-block;
 height: 1.5px;
 position: relative;
 vertical-align: middle;
 width: 75px;
}
.logo-abb:before { /*-- Thanks to http://vclever.com/blog/how-to-style-a-heading-with-horizontal-lines-either-side-using-css/ for this code --*/
 right: 0.5em;
 margin-left: -50%;
}
.logo-abb:after { /*-- Thanks to http://vclever.com/blog/how-to-style-a-heading-with-horizontal-lines-either-side-using-css/ for this code --*/
 left: 0.5em;
 margin-right: -50%;
}

.logo {
    font-weight: 600;
    margin: 0;
}

.no-underline:hover {
    text-decoration: none;
}

.social-links-logo {
    padding-top: 35px;
    padding-left: 1rem;
}

.headings-logo {
    padding-top: 35px;
    padding-right: 1rem;
}


/*----------Logo Ends-----------*/

/*----------Navbar------------*/

.menu {
    font-family: "Cormorant SC", sans-serif;
    font-size: 1.5rem;
}

.menu li {
    margin-right: 10px;
    margin-left: 10px;
}

.navbar-dark .navbar-nav .nav-link {
    color: #b09e80;
}

.menu a:hover {
    border-bottom: 1px solid #B09E80;
}

.navbar-custom {
    background-color: #192537;
}

.navbar .navbar-toggler {
    border:0;
}

.active {
    border-bottom: 1px solid #B09E80;
}

.dropdown-menu {
    background-color: #B09E80;
}

.dropdown-item {
    color:#192537;
}

.dropdown-item:hover {
    color: #B09E80;
    background-color: #192537;
}


/*----------Navbar Ends------------*/

/*----------Home Jumbotron----------*/

.jumbotron {
    background-color: transparent;
    padding: 0;
}

.hero-image { /*-- Thanks to Matt Rudge at Code Institue for this code --*/
    height:100vh;
    background: url('../images/beer-tap-background.jpg') no-repeat center center fixed;
    background-size: cover;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;

    position:relative;
}

.opaque-overlay { /*-- Thanks to Matt Rudge at Code Institue for this code --*/
    position: absolute;
    top:0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(0,0,0,0.7);
}

.block-divider-light {
    border-top: 5px solid #B09E80;
    width: 3rem;
}

.btn:hover {
    color: #fff;
}

/*----------Home Jumbotron Ends-----------*/

/*----------Customer Reviews-----------*/

.customer-image-container {
    max-width: 450px;
    margin: 2rem;
}

.customer-image {
    width: 150px;
    height: 150px;
    -o-object-fit:cover;
       object-fit:cover;
    padding: 0.5rem;
    background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat center center;
    border-radius: 50%;
}

.fa-star {
    color: #192537;
}

/*----------Cutomer Reviews End-----------*/

/*----------How it works-----------*/

.how-it-works-container {
    max-width: 300px;
    margin: 30px;
}

.how-it-works-image {
    width: 250px;
    height: 250px;
    -o-object-fit:cover;
       object-fit:cover;
    padding: 0.5rem;
    background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat center center;
    border-radius: 50%;
}


/*----------How it works Ends-----------*/

/*----------home-page-cards----------*/

.features {
    margin-top: 10px;
    margin-bottom: 20px;
}

.card {
    padding: 0.5rem;
    background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat center center;
    -webkit-box-shadow: 10px 10px 5px #75664e;
            box-shadow: 10px 10px 5px #75664e;
}


.card-body {
    background-color: #192537;
}

.card-button {
    background-color: #B09E80;
    border: none;
}

.card-button:hover {
    background-color: #304667;
    color: #B09E80;
    border: 1px solid #B09E80;
}


/*----------home-page-cards-ends----------*/

/*----------beers---------*/

.beer-image-container { /*-- Thanks to https://www.w3schools.com/howto/howto_css_image_overlay_title.asp for this code --*/
    height: 350px;
    max-width:250px;
    position: relative;
    margin: 20px;
}

.beer-image { /*-- Thanks to https://www.w3schools.com/howto/howto_css_image_overlay_title.asp for this code --*/
    width: 100%;
    height: 350px;
    -o-object-fit:cover;
       object-fit:cover;
    padding: 0.5rem;
    background: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933) no-repeat bottom center;
    -webkit-box-shadow: 10px 10px 5px #75664e;
            box-shadow: 10px 10px 5px #75664e;
}

.overlay { /*-- Thanks to https://www.w3schools.com/howto/howto_css_image_overlay_title.asp for this code --*/
  position: absolute;
  bottom: 0;
  background: rgb(0, 0, 0);
  background: rgba(27,37,55, 0.9);
  color: #f1f1f1;
  width: 100%;
  -webkit-transition: .5s ease;
  -o-transition: .5s ease;
  transition: .5s ease;
  opacity:0;
  color: white;
  padding: 20px;
  text-align: center;
  height: 350px;
}

.beer-image-container:hover .overlay {
  opacity: 1;
}

.beer-image-logo {
    width: 2rem;
    height: 2rem;
    -o-object-fit: cover;
       object-fit: cover;
}

.beers-hero-image { /*-- Thanks to https://css-tricks.com/perfect-full-page-background-image/ for this code --*/
    height:50vh;
    background: url('../images/beer-hero-image.jpg') no-repeat center center;
    background-size: cover;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;

    position:relative;
}

/*----------beers ends---------*/

/*----------breweries----------*/

.brewery-hero-image { /*-- Thanks to https://css-tricks.com/perfect-full-page-background-image/ for this code --*/
    height:50vh;
    background: url('../images/brewery-hero-image.jpg') no-repeat center center;
    background-size: cover;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;

    position:relative;
}

.card-img-top {
    height: 200px;
    width:100%;
    -o-object-fit:cover;
       object-fit:cover;
}

.brew-card-body {
    height: 360px;
}

.block-divider {
    border-top: 5px solid #192537;
    width: 50px;
}


/*----------breweries ends----------*/

/*----------Customize Your Crate-----------*/

.add-info {
    margin-top: 10px;
}

.form-control {
    background-color:#dcd4c5;
}

.delivery-button {
    background-color: #192537;
    margin-bottom: 0.5rem;
    margin-top: 0.5rem;
}

/*--------Customise Your Crate ends---------*/

/*--------Contact Us---------*/

.contact-hero-image { /*-- Thanks to https://css-tricks.com/perfect-full-page-background-image/ for this code --*/
    height:50vh;
    background: url('../images/contact-hero-image.jpg') no-repeat center bottom;
    background-size: cover;

    display: -webkit-box;

    display: -ms-flexbox;

    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;

    position:relative;
}

.image-headings {
    font-size: 3rem;
}

#iframe-map {
    padding:0.5rem;
    background-image: url(https://cdn.shopify.com/s/files/1/1728/1943/products/l18911_1024x1024.jpg?v=1504652933);
    border:none;
    margin-top: 1.25rem;
    width:100%;
    height: 300px;
}

.faq-headings {
    padding-top: 20px;
}

.faq-questions {
    padding-bottom: 10px;
}

.find-us {
    padding-top: 20px;
}

.address {
    margin: 0;
}

/*--------Contact Us ends---------*/


/*--------Footer--------*/

.footer-headings {
    margin:0;
    margin-bottom: 20px;
}

.footer-menu {
    text-align: center;
    padding-top:10px;
}

.social-links li a i {
    font-size: 20px;
    text-align: center;
    color: #B09E80;
    margin: 0;
}

footer {
    background-color: #192537;
    min-height: 100px
}

#beer-sign {
    font-size: 20px;
    color: #B09E80;
}

/*--------footer ends---------*/

/*--------Modal--------*/

.sign-up-button {
    background-color: #192537;
    margin-bottom: 10px;
}

.modal-header {
    font-weight: 600;
}

.form-group label {
    font-weight: 600;
}

.form-group input {
    font-family: "Roboto", sans-serif;
}

.checked {
    list-style: none;
}

.remove-outline:focus {
    outline:none;
}

/*--------Modal Ends---------*/

/*--------Media Queries---------*/

@media screen and (max-height: 620px) {
.hero-image {
    height: 110vh;
}
}

@media screen and (max-height: 570px) {
.hero-image {
    height: 120vh;
}
}

@media screen and (max-height: 510px) {
.hero-image {
    height: 130vh;
}
}

@media screen and (max-height: 320px) {
.hero-image {
    height: 150vh;
}
}

@media screen and (max-width: 310px) {
.hero-image {
    height: 140vh;
}
}

@media screen and (max-width: 280px) {
.card {
    max-width: 250px;
}

.card-body {
    height: auto;
}
}

/*--------Media Queries Ends---------*/

